--- a/src/lab/content.html
+++ b/src/lab/content.html
@@ -97,7 +97,7 @@ edit -->
 	<div id="lab-article-section-1-content" class="content">
 	  <p align="justify">
 	    
-Structural dynamics is a concept of structural engineering which deals with the behaviour of structures subjected to dynamic loadings like wind, earthquake and blasting. Any structure can be subjected to dynamic loading. Dynamic analysis can be used to find dynamic displacements, time history and for modal analysis.<br>
+Structural dynamics is a concept of structural engineering which deals with the behaviour of structures subjected to dynamic loadings like wind, earthquake and blasting. Any structure can be subjected to dynamic loading. Dynamic analysis can be used to find dynamic displacements, time history and for modal analysis.<br><br>
 
 In this virtual structural dynamics laboratory, the student will perform tests on different types of structures for different ground motions(earthquake data). These conditions and/or constraints are designed to reinforce classroom theory, by performing required tests in this virtual lab, analyze subsequent data, and compare the results with theory. For results, graphs and tables are generated after completion of computing experiment.
 
@@ -129,16 +129,16 @@ In this virtual structural dynamics laboratory, the student will perform tests o
 	  
             <li> 
 	      <!--Link and name of the experiment 1 -->
-<a href="exp1/index.html">Simple Harmonic Oscillator</a><br>
-<a href="exp2/index.html">Free Vibration of S.D.O.F System</a><br>
-<a href="exp3/index.html">Forced Vibration of S.D.O.F System</a><br>
-<a href="exp4/index.html">Impulse Response of S.D.O.F System</a><br>
-<a href="exp5/index.html">Concept of Response Spectrum</a><br>
-<a href="exp6/index.html">Vibration of M.D.O.F System</a><br>
-<a href="exp7/index.html">Behaviour of Rigid Blocks</a><br>
-<a href="exp8/index.html">Torsional Response of Building</a><br>
-<a href="exp9/index.html">Continuous Systems</a><br>
-<a href="exp10/index.html">Vibration Control</a> 
+<a href="exp1/index.html">Simple Harmonic Oscillator</a><br><br></li>
+<li><a href="exp2/index.html">Free Vibration of S.D.O.F System</a><br><br></li>
+<li><a href="exp3/index.html">Forced Vibration of S.D.O.F System</a><br><br></li>
+<li><a href="exp4/index.html">Impulse Response of S.D.O.F System</a><br><br></li>
+<li><a href="exp5/index.html">Concept of Response Spectrum</a><br><br></li>
+<li><a href="exp6/index.html">Vibration of M.D.O.F System</a><br><br></li>
+<li><a href="exp7/index.html">Behaviour of Rigid Blocks</a><br><br></li>
+<li><a href="exp8/index.html">Torsional Response of Building</a><br><br></li>
+<li><a href="exp9/index.html">Continuous Systems</a><br><br></li>
+<li><a href="exp10/index.html">Vibration Control</a> 
 	    </li>
 	  </ul>
 	</div>
