--- a/src/lab/exp1/content.html
+++ b/src/lab/exp1/content.html
@@ -128,22 +128,22 @@ Simple harmonic oscillator consists of a mass (m) hanging from a string of lengt
           <p align="justify">
           By applying Newton's second law for rotational systems, the equation of motion for the pendulum may be obtained. 
           </p>
-<img src="eq1.jpg" />
+<img src="eq1.JPG" />
 
           <p align="justify">
          Where, τ = Torque ; I = Moment of Inertia; α = Angular Velocity. m is mass of the oscillator, l is the length of the oscillator and theta is initial displacement. The above equation can be rearranged as - 
           </p> 
-<img src="eq2.jpg" />
+<img src="eq2.JPG" />
 
 <p align="justify">
 If the amplitude of  angular displacement is small then we can use the approximation (sinθ ≈ θ). By considering the above approximation, the equation of motion reduces to :
 </p>
-<img src="eq3.jpg" />
+<img src="eq3.JPG" />
 
 <p align="justify">
 The solution for equation of simple harmonic oscillator is 
 </p>
-<img src="eq4.jpg" />
+<img src="eq4.JPG" />
 
 <p align="justify">
 where, θ(t) is the history of oscillation, θ0 is the initial angle, ω=(g/l)1/2
@@ -174,7 +174,7 @@ where, θ(t) is the history of oscillation, θ0 is the initial angle, ω=(g/l)1/
           </p><br><br>
 
     
-<img src="simple-pendulum.jpg" />
+<img src="simple-pendulum.JPG" />
 
         </div>
 
@@ -223,12 +223,11 @@ where, θ(t) is the history of oscillation, θ0 is the initial angle, ω=(g/l)1/
         <div id="experiment-article-section-5-content" 
         class="content">
 <p align="justify">
-Start the experiment with the default values of length, mass and intial displacement (in angle). Pause the experiment after few cycles and note the observation.  
-</p>
-  <p align="justify">
-<b>Observation 1:</b><br>
-<li>Find the time period of the pendulum by noting the time interval of any one complete cycle from the response graph. </li><br>
-<li>You may note that this time period value is same for any complete cycle.</li><br>
+Start the experiment with the default values of length, mass and intial displacement (in angle). Pause the experiment after few cycles and note the observation.<br><br>  
+
+<strong>Observation 1:</strong><br>
+1.Find the time period of the pendulum by noting the time interval of any one complete cycle from the response graph. <br><br>
+2.You may note that this time period value is same for any complete cycle.<br>
 </p> 
           
 
