--- a/src/lab/exp1/content.html
+++ b/src/lab/exp1/content.html
@@ -128,22 +128,22 @@ Simple harmonic oscillator consists of a mass (m) hanging from a string of lengt
           <p align="justify">
           By applying Newton's second law for rotational systems, the equation of motion for the pendulum may be obtained. 
           </p>
-<img src="eq1.JPG" height="2" width="4"/>
+<img src="eq1.JPG" alt/>
 
           <p align="justify">
          Where, τ = Torque ; I = Moment of Inertia; α = Angular Velocity. m is mass of the oscillator, l is the length of the oscillator and theta is initial displacement. The above equation can be rearranged as - 
           </p> 
-<img src="eq2.JPG" />
+<img src="eq2.JPG" alt/>
 
 <p align="justify">
 If the amplitude of  angular displacement is small then we can use the approximation (sinθ ≈ θ). By considering the above approximation, the equation of motion reduces to :
 </p>
-<img src="eq3.JPG" />
+<img src="eq3.JPG" alt/>
 
 <p align="justify">
 The solution for equation of simple harmonic oscillator is 
 </p>
-<img src="eq4.JPG" />
+<img src="eq4.JPG" alt/>
 
 <p align="justify">
 where, θ(t) is the history of oscillation, θ0 is the initial angle, ω=(g/l)1/2
