--- a/src/lab/exp2/content.html
+++ b/src/lab/exp2/content.html
@@ -169,7 +169,7 @@ Here in this solution we can observe that the system will vibrate only if initia
         <div id="experiment-article-section-3-content" 
         class="content">
           <p align="justify">
-          To understand the behavior of single degree of freedom system vibrating with initial excitation (i.e, initial displacement and/or initial velocity and with or without damping).<br>
+          To understand the behavior of single degree of freedom system vibrating with initial excitation (i.e, initial displacement and/or initial velocity and with or without damping).<br><br>
 
 <img src="2.jpg" />
 
@@ -243,7 +243,7 @@ Draw the graph between mass and time period.<br>
         <a target="_blank" href="2.manual.pdf">Read More</a>
         </p>
 <p><br><br>
-         <a target="_blank" href="freevib.htm">Go to Manual view on Simple Harmonic Oscillator Experiment(Click here)</a><br><br>
+         <a target="_blank" href="freevib.htm">Go to Manual view on Free Vibration of S.D.O.F system(Click here)</a><br><br>
 </p>
           </div>
 
