--- a/src/lab/exp3/content.html
+++ b/src/lab/exp3/content.html
@@ -136,11 +136,11 @@ The differential governing equation for system without damping is
 mü + ku = posinωt <br>
 where, m = mass;   ü = acceleration;   k = stiffness;   u = displacement;   ωn= natural frequency;   po= amplitude of force. <br>  
 Solution of the given equation is <br>
-<img src="Expr3.jpg" /><br></p>
+<img src="Expr3.png" /><br></p>
 
      
 <p>
-        <a target="_blank" href="3.Theory.pdf">Read More</a>
+        <a target="_blank" href="3.Thoery.pdf">Read More</a>
         </p>
         </div>
       </section>
