--- a/src/lab/exp5/content.html
+++ b/src/lab/exp5/content.html
@@ -188,9 +188,9 @@ A variety of response spectra can be defined depending on the response quantity 
         <div id="experiment-article-section-4-content" 
         class="content">
           <p>
-<a target="_blank" href="undamped_freevib.swf">Go to Flash view on Concept of Response Spectrum(Click here)</a><br><br>
+<a target="_blank" href="responsespectrum.avi">Go to Flash view on Concept of Response Spectrum(Click here)</a><br><br>
 
-            <a target="_blank" href="ve_freevibbody.html">Go to Virtual lab on Concept of Response Spectrum(Click here)</a>
+            <a target="_blank" href="ve_responseSpecturm.html">Go to Virtual lab on Concept of Response Spectrum(Click here)</a>
  
 	        
             
