--- a/src/lab/exp6/content.html
+++ b/src/lab/exp6/content.html
@@ -146,7 +146,7 @@ Time Derivate of {x} are <br>
 </p> 
 
 <p>
-        <a target="_blank" href="6.Theory.pdf">Read More</a>
+        <a target="_blank" href="6.Thoery.pdf">Read More</a>
         </p>
         </div>
       </section>
