--- a/src/lab/exp7/content.html
+++ b/src/lab/exp7/content.html
@@ -129,7 +129,7 @@ To understand the behavior of rigid blocks (or furniture) to given amplitude and
           <p align="justify">
 <img src="Expr6-1.png"><br><br>
           The equations that govern the rocking motion under the simultaneous presence of,<br>
-            <img src="Expr6-2.png"> -- horizontal ground accelaration and,<br>
+            <img src="Expr6-2.png" width="2" height="1"> -- horizontal ground accelaration and,<br>
              <img src="Expr6-3.png">-- vertical ground acceleration are ..
 </p> 
 
