Embedded swf into html & added Google Analytics
git-svn-id: file:///labs/eerc06/svn/CEVL6@35 b2ed9fda-8844-4c69-8027-b1d4d382de31

--- a/src/lab/exp1/content.html
+++ b/src/lab/exp1/content.html
@@ -197,7 +197,7 @@ where, θ(t) is the history of oscillation, θ0 is the initial angle, ω=(g/l)1/
         <div id="experiment-article-section-4-content" 
         class="content">
           <p>
-<a target="_blank" href="exp1.swf">Go to Flash view on Simple Harmonic Oscillator Experiment(Click here)</a><br><br>
+<a target="_blank" href="exp1.html">Go to Flash view on Simple Harmonic Oscillator Experiment(Click here)</a><br><br>
             <a target="_blank" href="ve_pendulum.html">Go to Virtual lab on Simple Harmonic Oscillator Experiment(Click here)</a>
  
 	        
