--- a/src/lab/exp10/content.html
+++ b/src/lab/exp10/content.html
@@ -192,7 +192,7 @@ When the ground shakes, the rollers freely roll, but the building above does not
         <div id="experiment-article-section-4-content" 
         class="content">
           <p>
-<a target="_blank" href="vibration-control1.swf">Go to Flash view on Vibration Control - Tuned Mass Damper(Click here)</a><br><br>
+<a target="_blank" href="vibration-control1.html">Go to Flash view on Vibration Control - Tuned Mass Damper(Click here)</a><br><br>
 <a target="_blank" href="tld.swf">Go to Flash view on Vibration Control - Tuned Liquid Damper(Click here)</a><br><br>
             <a target="_blank" href="ve_vibrationcontrol.html">Go to Virtual lab on Vibration Control(Click here)</a>
  
