--- a/src/lab/exp2/content.html
+++ b/src/lab/exp2/content.html
@@ -198,8 +198,8 @@ Here in this solution we can observe that the system will vibrate only if initia
         <div id="experiment-article-section-4-content" 
         class="content">
           <p>
-<a target="_blank" href="undamped_freevib.swf">Go to Flash view on Free Vibration of S.D.O.F system - Undamped Free Vibration(Click here)</a><br><br>
-<a target="_blank" href="dampedfree.swf">Go to Flash view on Free Vibration of S.D.O.F system - Damped Free Vibration(Click here)</a><br><br>
+<a target="_blank" href="undamped_freevib.html">Go to Flash view on Free Vibration of S.D.O.F system - Undamped Free Vibration(Click here)</a><br><br>
+<a target="_blank" href="dampedfree.html">Go to Flash view on Free Vibration of S.D.O.F system - Damped Free Vibration(Click here)</a><br><br>
             <a target="_blank" href="ve_freevibbody.html">Go to Virtual lab on Free Vibration of S.D.O.F system(Click here)</a>
  
 	        
