--- a/src/lab/exp3/content.html
+++ b/src/lab/exp3/content.html
@@ -191,8 +191,8 @@ Solution of the given equation is <br>
         <div id="experiment-article-section-4-content" 
         class="content">
           <p>
-<a target="_blank" href="undamped_forced.swf">Go to Flash view on Forced Vibration of S.D.O.F system - Undamped Forced Vibration(Click here)</a><br><br>
-<a target="_blank" href="DampedForced.swf">Go to Flash view on Forced Vibration of S.D.O.F system - Damped Forced Vibration(Click here)</a><br><br>
+<a target="_blank" href="undamped_forced.html">Go to Flash view on Forced Vibration of S.D.O.F system - Undamped Forced Vibration(Click here)</a><br><br>
+<a target="_blank" href="DampedForced.html">Go to Flash view on Forced Vibration of S.D.O.F system - Damped Forced Vibration(Click here)</a><br><br>
             <a target="_blank" href="ve_forcedvibbody.html">Go to Virtual lab on Forced Vibration of S.D.O.F system(Click here)</a>
  
 	        
