--- a/src/lab/exp4/content.html
+++ b/src/lab/exp4/content.html
@@ -185,7 +185,7 @@ A step force jumps suddenly from zero to and stays constant at value. It is desi
         <div id="experiment-article-section-4-content" 
         class="content">
           <p>
-<a target="_blank" href="Impluse.swf">Go to Flash view on Impulse Response of S.D.O.F system(Click here)</a><br><br>
+<a target="_blank" href="Impluse.html">Go to Flash view on Impulse Response of S.D.O.F system(Click here)</a><br><br>
 
             <a target="_blank" href="ve_impulse.html">Go to Virtual lab on Impulse Response of S.D.O.F system(Click here)</a>
  
