--- a/src/lab/exp6/content.html
+++ b/src/lab/exp6/content.html
@@ -197,7 +197,7 @@ Time Derivate of {x} are <br>
         <div id="experiment-article-section-4-content" 
         class="content">
           <p>
-<a target="_blank" href="exp5.swf">Go to Flash view on Vibration of M.D.O.F system - Undamped Free Vibration(Click here)</a><br><br>
+<a target="_blank" href="exp5.html">Go to Flash view on Vibration of M.D.O.F system - Undamped Free Vibration(Click here)</a><br><br>
 
             <a target="_blank" href="ve_mdof.html">Go to Virtual lab on Vibration of M.D.O.F system(Click here)</a>
  
