--- a/src/lab/exp8/content.html
+++ b/src/lab/exp8/content.html
@@ -185,7 +185,7 @@ where<br>
         <div id="experiment-article-section-4-content" 
         class="content">
           <p>
-<a target="_blank" href="torsion6.swf">Go to Flash view on Torsional Response of Building(Click here)</a><br><br>
+<a target="_blank" href="torsion6.html">Go to Flash view on Torsional Response of Building(Click here)</a><br><br>
 
             <a target="_blank" href="ve_torsion.html">Go to Virtual lab on Torsional Response of Building(Click here)</a>
  
