--- a/src/lab/exp9/content.html
+++ b/src/lab/exp9/content.html
@@ -186,7 +186,7 @@ where, <br>
         <div id="experiment-article-section-4-content" 
         class="content">
           <p>
-<a target="_blank" href="Coolingtowers.swf">Go to Flash view on Continuous Systems(Click here)</a><br><br>
+<a target="_blank" href="Coolingtowers.html">Go to Flash view on Continuous Systems(Click here)</a><br><br>
  
             <a target="_blank" href="ve_csystems1.html">Go to Virtual lab on Continuous Systems - Rectangular Profile(Click here)</a><br><br>
              <a target="_blank" href="ve_csystems2.html">Go to Virtual lab on Continuous Systems - Trapezoidal Profile(Click here)</a><br><br>
