--- a/src/lab/exp1/Theory.html
+++ b/src/lab/exp1/Theory.html
@@ -153,7 +153,7 @@ where, θ(t) is the history of oscillation, θ0 is the initial angle, ω=(g/l)1/
 				<a href="http://www.sakshat.ac.in/" class="text-a-lightgreen" style="text-decoration: underline;" > Sakshat Portal</a>
 				<!--<a href="http://118.102.191.38/feedback/Registration.html" class="text-a-lightgreen" style="text-decoration: underline;" > Nodal Center</a>-->
 				<a href="http://outreach.vlabs.ac.in/" class="text-a-lightgreen" style="text-decoration: underline;" > Outreach Portal</a>
-				<a href="./faq.html" class="text-a-lightgreen" style="text-decoration: underline;" > FAQ</a>
+				<a href="../faq.html" class="text-a-lightgreen" style="text-decoration: underline;" > FAQ</a>
 	                </div>
 
 			<div class="col-md-3 border-right-green-dotted" id="contact" >
