added cancel button in the quiz page of the experiments to undo the selected buttons

--- a/src/lab/exp1/Manual.html
+++ b/src/lab/exp1/Manual.html
@@ -109,7 +109,7 @@ Start the experiment with the default values of length, mass and intial displace
 <a href="1.manual.pdf" target="_blank">Read More</a>
 </p>
 <p><br><br>
-<a href="shm.htm" target="_blank">Go to Manual view on Simple Harmonic Oscillator Experiment(Click here)</a><br><br>
+<a href="shm.html" target="_blank">Go to Manual view on Simple Harmonic Oscillator Experiment(Click here)</a><br><br>
 </br></br></br></br></p>
 </div>						</div>
 					</div>
