--- a/src/lab/exp8/Quizzes.html
+++ b/src/lab/exp8/Quizzes.html
@@ -125,6 +125,7 @@
 <input id="q4" name="q4" type="radio" value="0">
 <font color="red"> False </font> <br/><br/>
 </input></br></input></br></input></br></input></br></input></br></input></br></input></br></input></br></p>
+<input type="button" value="Cancel" onClick="window.location.href=window.location.href">
 </div>						</div>
 					</div>
 			</div>
