--- a/src/lab/exp9/Quizzes.html
+++ b/src/lab/exp9/Quizzes.html
@@ -119,6 +119,7 @@
 <input id="q3" name="q3" type="radio" value="0">
 <font color="red"> False </font> <br/><br/>
 </input></br></input></br></input></br></input></br></input></br></input></br></p>
+<input type="button" value="Cancel" onClick="window.location.href=window.location.href">
 </div>						</div>
 					</div>
 			</div>
