added cancel button in the quiz page of the experiments to undo the selected buttons

--- a/src/lab/exp1/Quizzes.html
+++ b/src/lab/exp1/Quizzes.html
@@ -131,6 +131,7 @@
 <input id="q5" name="q5" type="radio" value="0">
 <font color="red"> False </font> <br/><br/>
 </input></br></input></br></input></br></input></br></input></br></input></br></input></br></input></br></input></br></input></br></p>
+<input type="button" value="Reload Page" onClick="window.location.href=window.location.href">
 </div>						</div>
 					</div>
 			</div>
