--- a/src/lab/exp9/Procedure.html
+++ b/src/lab/exp9/Procedure.html
@@ -100,7 +100,8 @@
 							<!--edit -->
 <h1 class="text-h2-lightblue">Continuous Systems</h1><div class="content" id="experiment-article-section-7-content">
 <p>
-	      Procedure for the experiment is as follows.
+	     <!--  Procedure for the experiment is as follows. -->
+	      Procedure is under construction. It will updated soon.
 	    </p>
 </div>						</div>
 					</div>
