unlink manual video in all the experiments, corrected grammer mistakes

--- a/src/lab/exp10/Introduction.html
+++ b/src/lab/exp10/Introduction.html
@@ -107,7 +107,7 @@ All seismic vibration control devices may be classified as passive and active wh
 1. Passive control device (TMD, Base Isolator) imparts forces that are developed directly as a result of motion of structure (i.e., no actuator involved). <br>
 
 2. Active control devices incorporate real-time recoding instrumentation on the ground integrated with earthquake input processing equipment and actuators within the structure. <br><br>
-<img src="03.jpg"/>
+<img src="03.jpg" style="width:80%;height:80%;"/>
 </br></br></br></br></br></br></br></p>
 </div>						</div>
 					</div>
