--- a/src/lab/exp2/Manual.html
+++ b/src/lab/exp2/Manual.html
@@ -115,7 +115,9 @@ Draw the graph between mass and time period.<br>
 <a href="2.manual.pdf" target="_blank">Read More</a>
 </p>
 <p><br><br>
-<a href="freevib.htm" target="_blank">Go to Manual view on Free Vibration of S.D.O.F system(Click here)</a><br><br>
+<!-- <a href="freevib.htm" target="_blank">Go to Manual view on Free Vibration of S.D.O.F system(Click here)</a><br><br>
+</br></br></br></br> -->
+<a>Manual view on Free Vibration of S.D.O.F system is under construction</a><br><br>
 </br></br></br></br></p>
 </div>						</div>
 					</div>
