--- a/src/lab/exp3/Manual.html
+++ b/src/lab/exp3/Manual.html
@@ -113,12 +113,14 @@
 7. Run the experiment and note the displacement.<br>
 8. Response value increases and reaches peak when forcing frequency is nearing natural frequency of the structure.<br>
 9. Draw the plot between maximum response and frequency ratio. <br>
-</br></br></br></br></br></br></br></br></br></br></br></br></br></br></p>
+</br></br></p>
 <p>
 <a href="3.manual.pdf" target="_blank">Read More</a>
 </p>
 <p><br><br>
-<a href="forced.htm" target="_blank">Go to Manual view on Forced Vibration of S.D.O.F system(Click here)</a><br><br>
+<!-- <a href="forced.htm" target="_blank">Go to Manual view on Forced Vibration of S.D.O.F system(Click here)</a><br><br>
+</br></br></br></br> -->
+<a>Manual view on Forced Vibration of S.D.O.F system is under construction</a><br><br>
 </br></br></br></br></p>
 </div>						</div>
 					</div>
