--- a/src/lab/exp4/Introduction.html
+++ b/src/lab/exp4/Introduction.html
@@ -101,7 +101,7 @@
 <h1 class="text-h2-lightblue">Impulse Response of S.D.O.F system</h1><div class="content" id="experiment-article-section-1-content">
 <p align="justify">
             In many practical situations the dynamic excitation is neither harmonic nor periodic. The dynamic response of single degree of freedom systems to excitations varying arbitrary with time like Step force, Ramp or Linearly increasing force, Step force with finite rise time, Rectangular force and Half Sine pulse force. When a force is applied to a rigid body it changes the momentum of that body. <br><br>
-<img src="SDOF.jpg"/>
+<img src="SDOF.jpg" style="width:80%;height:80%" />
 </br></br></p>
 </div>						</div>
 					</div>
