--- a/src/lab/exp4/Procedure.html
+++ b/src/lab/exp4/Procedure.html
@@ -101,7 +101,7 @@
 <h1 class="text-h2-lightblue">Impulse Response of S.D.O.F system</h1><div class="content" id="experiment-article-section-7-content">
 <p>
 	     <!--  Procedure for the experiment is as follows. -->
-	      Procedure is under construction. It will updated soon.
+	      Procedure is under construction. It will be updated soon.
 	    </p>
 </div>						</div>
 					</div>
