--- a/src/lab/exp6/Manual.html
+++ b/src/lab/exp6/Manual.html
@@ -112,9 +112,11 @@
 6. Input mass and stiffness of each storey.<br> 
 7. Select ground motion and also damping. <br>
 8. Run the experiment. User can find the response of the each floor level on the screen. User can also find the response of each mode. <br>
-</br></br></br></br></br></br></br></br></br></br></br></br></br></p>
-<p><br><br>
-<a href="Multidegree.htm" target="_blank">Go to Manual view on Vibration of M.D.O.F system(Click here)</a><br><br>
+</p>
+<p><br>
+<!-- <a href="Multidegree.htm" target="_blank">Go to Manual view on Vibration of M.D.O.F system(Click here)</a><br><br>
+</br></br></br></br> -->
+<a >Manual view on Vibration of M.D.O.F system is under construction</a><br><br>
 </br></br></br></br></p>
 </div>						</div>
 					</div>
