--- a/src/lab/exp7/Manual.html
+++ b/src/lab/exp7/Manual.html
@@ -112,7 +112,9 @@ User can also compare where the time period remains same under different amplitu
 <a href="7manual.pdf" target="_blank">Read More</a>
 </p>
 <p><br><br>
-<a href="ShakeTable.htm" target="_blank">Go to Manual view on Bahaviour of Rigid Blocks(Click here)</a><br><br>
+<!-- <a href="ShakeTable.htm" target="_blank">Go to Manual view on Bahaviour of Rigid Blocks(Click here)</a><br><br>
+</br></br></br></br> -->
+<a >Manual view on Bahaviour of Rigid Blocks is under construction</a><br><br>
 </br></br></br></br></p>
 </div>						</div>
 					</div>
