--- a/src/lab/exp8/Introduction.html
+++ b/src/lab/exp8/Introduction.html
@@ -101,7 +101,7 @@
 <h1 class="text-h2-lightblue">Torsional Response of Building</h1><div class="content" id="experiment-article-section-1-content">
 <p align="justify">
             Torsional responses of building structures could be induced by structural eccentricities and by varying multiple ground excitations. Generally torsion occurs in structures which are unsymmetrical .<br><br>
-<img src="04.jpg"/>
+<img src="04.jpg" style="width:80%;height:80%;"/>
 </br></br></p>
 </div>						</div>
 					</div>
