--- a/src/lab/exp9/Introduction.html
+++ b/src/lab/exp9/Introduction.html
@@ -101,7 +101,7 @@
 <h1 class="text-h2-lightblue">Continuous Systems</h1><div class="content" id="experiment-article-section-1-content">
 <p align="justify">
            Some special type of structures like cooling towers , bunkers and silos are considered as continuous systems. These type of structures have importance in their functionality. Some of the continuous systems may have different type of profiles like rectangular, trapezoidal, hyperboloid etc. Their response due to dynamic loading varies for different profiles<br><br>
-<img src="01.jpg"/>
+<img src="01.jpg" style="width:80%;height:80%;"/>
 </br></br></p>
 </div>						</div>
 					</div>
