--- a/src/lab/exp1/Quizzes.html
+++ b/src/lab/exp1/Quizzes.html
@@ -130,8 +130,8 @@
 <font color="green"> True </font> <br>
 <input id="q5" name="q5" type="radio" value="0">
 <font color="red"> False </font> <br/><br/>
-</input></br></input></br></input></br></input></br></input></br></input></br></input></br></input></br></input></br></input></br></p>
-<input type="button" value="Reload Page" onClick="window.location.href=window.location.href">
+</p>
+<input type="button" value="Cancel" onClick="window.location.href=window.location.href">
 </div>						</div>
 					</div>
 			</div>
