--- a/src/lab/exp10/Objective.html
+++ b/src/lab/exp10/Objective.html
@@ -101,7 +101,7 @@
 <h1 class="text-h2-lightblue">Vibration Control</h1><div class="content" id="experiment-article-section-3-content">
 <p align="justify">
          Objective of vibration control experiment is to understand how dampers or isolators can control vibration of structures<br><br>
-<img src="03.jpg"/>
+<img src="03.jpg" style="width:80%;height:80%"/>
 </br></br></p><br><br>
 </br></br></div>						</div>
 					</div>
