--- a/src/lab/exp4/Objective.html
+++ b/src/lab/exp4/Objective.html
@@ -101,7 +101,7 @@
 <h1 class="text-h2-lightblue">Impulse Response of S.D.O.F system</h1><div class="content" id="experiment-article-section-3-content">
 <p align="justify">
          To determine the response of single degree of freedom system to arbitrary, step and pulse excitations.<br><br>
-<img src="SDOF.jpg"/>
+<img src="SDOF.jpg" style="width:80%;height:80%;" />
 </br></br></p><br><br>
 </br></br></div>						</div>
 					</div>
