--- a/src/lab/exp5/Manual.html
+++ b/src/lab/exp5/Manual.html
@@ -110,7 +110,9 @@ You will observe after completing that the maximum displacement of the oscillato
 <a href="5.manual.pdf" target="_blank">Read More</a>
 </p>
 <p><br><br>
-<a href="Responce spectrum.htm" target="_blank">Go to Manual view on Concept of Response Spectrum(Click here)</a><br><br>
+<!-- <a href="Responce spectrum.htm" target="_blank">Go to Manual view on Concept of Response Spectrum(Click here)</a><br><br>
+</br></br></br></br> -->
+<a>Manual view on Concept of Response Spectrum is under construction</a><br><br>
 </br></br></br></br></p>
 </div>						</div>
 					</div>
