--- a/src/lab/exp7/Objective.html
+++ b/src/lab/exp7/Objective.html
@@ -101,7 +101,7 @@
 <h1 class="text-h2-lightblue">Behaviour of Rigid Blocks</h1><div class="content" id="experiment-article-section-3-content">
 <p align="justify">
           To understand the behavior of rigid blocks(or furniture) to given amplitude and frequency of ground motion. <br><br>
-<img src="6.jpg"/>
+<img src="6.jpg" style="width:80%;height:80%;"/>
 </br></br></p><br><br>
 </br></br></div>						</div>
 					</div>
