--- a/src/lab/exp8/Objective.html
+++ b/src/lab/exp8/Objective.html
@@ -101,7 +101,7 @@
 <h1 class="text-h2-lightblue">Torsional Response of Building</h1><div class="content" id="experiment-article-section-3-content">
 <p align="justify">
           To find out the responses of 3 DOF's (2 translations and 1 rotation) of a single storey structure especially torsional response along with translations.<br><br>
-<img src="04.jpg"/>
+<img src="04.jpg" style="width:80%;height:80%;"/>
 </br></br></p><br><br>
 </br></br></div>						</div>
 					</div>
