--- a/src/lab/exp9/Objective.html
+++ b/src/lab/exp9/Objective.html
@@ -101,7 +101,7 @@
 <h1 class="text-h2-lightblue">Continuous Systems</h1><div class="content" id="experiment-article-section-3-content">
 <p align="justify">
           To know the response of structure for different profiles and for different behavior (shear(fixed), bending, shear(hinge)) of the structure.<br><br>
-<img src="01.jpg"/>
+<img src="01.jpg" style="width:80%;height:80%;"/>
 </br></br></p><br><br>
 </br></br></div>						</div>
 					</div>
