--- a/src/lab/exp1/Quizzes.html
+++ b/src/lab/exp1/Quizzes.html
@@ -25,6 +25,34 @@
     <link href="../css/style.css" rel="stylesheet">
 	<script type="text/javascript" src = 'tabs.js'></script>
 <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-67558473-1', 'auto');ga('send', 'pageview');</script>	
+
+<style>
+.qheader{
+font:bold 14px Arial;
+}
+
+.qselections{
+font:normal 13px Arial;
+}
+</style>
+
+<script src="quizconfig.js">
+</script>
+
+<script>
+
+/***********************************************
+* JavaScriptKit.com Multiple Choice Quiz Script (http://www.javascriptkit.com)
+* Copyright 2003 JavaScript Kit- http://www.javascriptkit.com
+* This notice and footnote must stay intact for use
+* Visit JavaScript Kit (http://www.javascriptkit.com/) for full source code
+***********************************************/
+
+var actualchoices=new Array()
+document.cookie="ready=yes"
+</script>
+
+
 </head>
 <body id="page-top" class="index">
 <div id="top">
@@ -99,7 +127,7 @@
 							
 							<!--edit -->
 <h1 class="text-h2-lightblue">Simple Harmonic Oscillator</h1><div class="content" id="experiment-article-section-6-content">
-<p>
+<!-- <p>
 <b>Q1.</b> 
                Time taken for one complete oscillation is called Time Period of the oscillator.  <br>
 <input id="q1" name="q1" type="radio" value="1">
@@ -132,6 +160,63 @@
 <font color="red"> False </font> <br/><br/>
 </p>
 <input type="button" value="Cancel" onClick="window.location.href=window.location.href">
+<input type="submit" value="Submit" > -->
+<p>
+<form method="POST" name="myquiz">
+
+<!-- <font face="Arial"><big><big>General Knowledge Quiz</big></big></font></p> -->
+
+<div class="qheader">
+1. Time taken for one complete oscillation is called Time Period of the oscillator. </div>
+<div class="qselections">
+<input type="radio" value="a" name="question1">a) True<br>
+<input type="radio" value="b" name="question1">b) False<br>
+</div>
+
+<br>
+
+<div class="qheader">
+2) Time period of the oscillator is constant for given values of mass, length and initial conditions.</div>
+<div class="qselections">
+<input type="radio" value="a" name="question2">a) True<br>
+<input type="radio" value="b" name="question2">b) False<br>
+</div>
+
+<br>
+
+<div class="qheader">
+3) Value of Time period depends on initial conditions.</div>
+<div class="qselections">
+<input type="radio" value="a" name="question3">a) True<br>
+<input type="radio" value="b" name="question3">b) False<br>
+</div>
+
+<br>
+
+<div class="qheader">
+4) Value of time period depends on mass. </div>
+<div class="qselections">
+<input type="radio" value="a" name="question4">a) True<br>
+<input type="radio" value="b" name="question4">b) False<br>
+</div>
+
+<br>
+
+<div class="qheader">
+5)  Value of time period depends on length of the oscillator.</div>
+<div class="qselections">
+<input type="radio" value="a" name="question5">a) True<br>
+<input type="radio" value="b" name="question5">b) False<br>
+</div>
+
+</form>
+
+<form>
+<div align="center">
+<input type="button" value="Grade Me!" name="B1" onClick="gradeit()"> <input type="button" value="Reset" name="B2" onClick="document.myquiz.reset()"></div>
+</form>
+</p>
+
 </div>						</div>
 					</div>
 			</div>
