--- a/src/lab/exp1/Procedure.html
+++ b/src/lab/exp1/Procedure.html
@@ -101,7 +101,20 @@
 <h1 class="text-h2-lightblue">Simple Harmonic Oscillator</h1><div class="content" id="experiment-article-section-7-content">
 <p>
 	      <!-- Procedure for the experiment is as follows. -->
-	      Procedure is under construction. It will be updated soon.
+	     <!-- Procedure is under construction. It will be updated soon.-->
+	1.Find the time period of the pendulum by noting the time interval of any one complete cycle from the response graph.<br/>2.You may note that this time period value is same for any complete cycle.<br/>3.Repeat the above procedure by changing the initial displacement, mass and observe the time period.<br/>4.You may observe that the time period value does not change with initial displacement or  even changing the mass of the oscillator. It means Time Period is independent of mass of  the oscillator and also independent of initial displacement.<br/>5.Keeping the mass and initial displacement as default values, repeat the experiment by changing the length.<br/>6.Make note of the time interval of any one complete cycle from the response graph. You can observe that the Time Period of the simple harmonic oscillator is dependent on the length of the oscillator.<br/>7.Repeat the experiment by giving different lengths of oscillator and draw the graph between length and time period of the simple harmonic oscillator. <br/>
+
+
+
+
+ 
+
+
+
+
+
+
+
 	    </p>
 </div>						</div>
 					</div>
