--- a/src/lab/exp3/Manual.html
+++ b/src/lab/exp3/Manual.html
@@ -120,7 +120,7 @@
 <p><br><br>
 <!-- <a href="forced.htm" target="_blank">Go to Manual view on Forced Vibration of S.D.O.F system(Click here)</a><br><br>
 </br></br></br></br> -->
-<a>Manual view on Forced Vibration of S.D.O.F system is under construction</a><br><br>
+<a href="http://nptel.ac.in/courses/112103022/37">Manual view on Forced Vibration of S.D.O.F system.</a><br><br>
 </br></br></br></br></p>
 </div>						</div>
 					</div>
