--- a/src/lab/exp6/Manual.html
+++ b/src/lab/exp6/Manual.html
@@ -116,7 +116,7 @@
 <p><br>
 <!-- <a href="Multidegree.htm" target="_blank">Go to Manual view on Vibration of M.D.O.F system(Click here)</a><br><br>
 </br></br></br></br> -->
-<a >Manual view on Vibration of M.D.O.F system is under construction</a><br><br>
+<a href="https://www.colorado.edu/engineering/CAS/courses.d/Structures.d/IAST.Lect19.d/IAST.Lect19.Slides.pdf">Manual view on Vibration of M.D.O.F system.</a><br><br>
 </br></br></br></br></p>
 </div>						</div>
 					</div>
