--- a/src/lab/exp4/Manual.html
+++ b/src/lab/exp4/Manual.html
@@ -109,7 +109,7 @@ User can change all the dimensions related to mass and stiffness of SDOF along w
 <p><br><br>
 <!-- <a href="Responce spectrum.htm" target="_blank">Go to Manual view on Impulse Response of S.D.O.F system(Click here)</a><br><br>
 </br></br></br></br> -->
-<a>Manual view on Impulse Response of S.D.O.F system is under construction</a><br><br>
+<a href="https://www.youtube.com/watch?v=ff-ol6h3WyU">Manual view on Impulse Response of S.D.O.F system.</a><br><br>
 </br></br></br></br></p>
 </div>						</div>
 					</div>
