--- a/src/lab/exp7/Manual.html
+++ b/src/lab/exp7/Manual.html
@@ -114,7 +114,7 @@ User can also compare where the time period remains same under different amplitu
 <p><br><br>
 <!-- <a href="ShakeTable.htm" target="_blank">Go to Manual view on Bahaviour of Rigid Blocks(Click here)</a><br><br>
 </br></br></br></br> -->
-<a >Manual view on Bahaviour of Rigid Blocks is under construction</a><br><br>
+<a href="https://link.springer.com/article/10.1007/s11012-005-5875-7">Manual view on Bahaviour of Rigid Blocks<!--is under construction--></a><br><br>
 </br></br></br></br></p>
 </div>						</div>
 					</div>
