--- a/src/lab/exp1/Manual.html
+++ b/src/lab/exp1/Manual.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -111,7 +112,7 @@ Start the experiment with the default values of length, mass and intial displace
 <p><br><br>
 <!-- <a href="shm.htm" target="_blank">Go to Manual view on Simple Harmonic Oscillator Experiment(Click here)</a><br><br>
 </br></br></br></br> -->
-<a>Manual video on Simple Harmonic Oscillator Experiment is under construction</a><br><br>
+<a href="https://www.youtube.com/watch?v=gO4ksIxCJV8">Manual video on Simple Harmonic Oscillator Experiment</a><br><br>
 </br></br></br></br></p>
 </div>						</div>
 					</div>
