--- a/src/lab/exp1/Introduction.html
+++ b/src/lab/exp1/Introduction.html
@@ -98,13 +98,13 @@
 						<div class="col-md-10 lab-list-col-10">
 							
 							<!--edit -->
-<h1 class="text-h2-lightblue">Simple Harmonic Oscillator</h1><div class="content" id="experiment-article-section-1-content">
-<p align="justify">
-            In this module, basic concepts of simple oscillator are explained. Initially, an example of simple pendulum is taken and the basic terminology i.e., what is initial displacement, initial velocity,natural frequency and time period are explained. Each of these terms is illustrated by giving an example, where user can enter his value and observe the behavior of structure for his input.<br><br>
+<h1 class="text-h2-lightblue">Simple Harmonic Oscillator</h1><div class="content" id="experiment-article-section-4-content">
+<p>
+<a href="exp1.html" target="_blank">Click here to view the experiment</a><br><br>
 
-Simple harmonic oscillator consists of a mass (m) hanging from a string of length (l), fixed at a pivot point P. When the mass is displaced from its mean position by giving some initial displacement (angle), oscillator starts swinging back and forth with periodic motion. 
-
- </br></br></p>
+<!--<a href="exp1.html" target="_blank">Go to Flash view on Simple Harmonic Oscillator Experiment(Click here)</a><br><br>
+<a href="ve_pendulum.html" target="_blank">Go to Virtual lab on Simple Harmonic Oscillator Experiment(Click here)</a>-->
+</br></br></p>
 </div>						</div>
 					</div>
 			</div>
