--- a/src/lab/exp1/Experiment.html
+++ b/src/lab/exp1/Experiment.html
@@ -100,8 +100,10 @@
 							<!--edit -->
 <h1 class="text-h2-lightblue">Simple Harmonic Oscillator</h1><div class="content" id="experiment-article-section-4-content">
 <p>
-<a href="exp1.html" target="_blank">Go to Flash view on Simple Harmonic Oscillator Experiment(Click here)</a><br><br>
-<a href="ve_pendulum.html" target="_blank">Go to Virtual lab on Simple Harmonic Oscillator Experiment(Click here)</a>
+<a href="exp_sim.html" target="_blank">Click here to view the experiment</a><br><br>
+
+<!--<a href="exp1.html" target="_blank">Go to Flash view on Simple Harmonic Oscillator Experiment(Click here)</a><br><br>
+<a href="ve_pendulum.html" target="_blank">Go to Virtual lab on Simple Harmonic Oscillator Experiment(Click here)</a>-->
 </br></br></p>
 </div>						</div>
 					</div>
