--- a/src/lab/exp2/Experiment.html
+++ b/src/lab/exp2/Experiment.html
@@ -100,9 +100,11 @@
 							<!--edit -->
 <h1 class="text-h2-lightblue">Free vibration of S.D.O.F system</h1><div class="content" id="experiment-article-section-4-content">
 <p>
-<a href="undamped_freevib.html" target="_blank">Go to Flash view on Free Vibration of S.D.O.F system - Undamped Free Vibration(Click here)</a><br><br>
+<a href="undamped_freevib_sim.html" target="_blank">Click here to view Free Vibration of S.D.O.F system - Undamped Free Vibration(Click here)</a><br><br>
+<a href="dampedfree_sim.html" target="_blank">Click here to view Free Vibration of S.D.O.F system - Damped Free Vibration</a><br><br>
+<!--<a href="undamped_freevib.html" target="_blank">Go to Flash view on Free Vibration of S.D.O.F system - Undamped Free Vibration(Click here)</a><br><br>
 <a href="dampedfree.html" target="_blank">Go to Flash view on Free Vibration of S.D.O.F system - Damped Free Vibration(Click here)</a><br><br>
-<a href="ve_freevibbody.html" target="_blank">Go to Virtual lab on Free Vibration of S.D.O.F system(Click here)</a>
+<a href="ve_freevibbody.html" target="_blank">Go to Virtual lab on Free Vibration of S.D.O.F system(Click here)</a>-->
 </br></br></br></br></p>
 </div>						</div>
 					</div>
