--- a/src/lab/exp3/Experiment.html
+++ b/src/lab/exp3/Experiment.html
@@ -100,8 +100,11 @@
 							<!--edit -->
 <h1 class="text-h2-lightblue">Forced vibration of S.D.O.F system</h1><div class="content" id="experiment-article-section-4-content">
 <p>
-<a href="undamped_forced.html" target="_blank">Go to Flash view on Forced Vibration of S.D.O.F system - Undamped Forced Vibration(Click here)</a><br><br>
-<a href="DampedForced.html" target="_blank">Go to Flash view on Forced Vibration of S.D.O.F system - Damped Forced Vibration(Click here)</a><br><br>
+<a href="undamped_forced_sim.html" target="_blank">Click here to view Forced Vibration of S.D.O.F system - Undamped Forced Vibration(Click here)</a><br><br>
+<a href="DampedForced_sim.html" target="_blank">Click here to view Forced Vibration of S.D.O.F system - Damped Forced Vibration</a><br><br>
+
+<!--<a href="undamped_forced.html" target="_blank">Go to Flash view on Forced Vibration of S.D.O.F system - Undamped Forced Vibration(Click here)</a><br><br>
+<a href="DampedForced.html" target="_blank">Go to Flash view on Forced Vibration of S.D.O.F system - Damped Forced Vibration(Click here)</a><br><br>-->
 <a href="ve_forcedvibbody.html" target="_blank">Go to Virtual lab on Forced Vibration of S.D.O.F system(Click here)</a>
 </br></br></br></br></p>
 </div>						</div>
