--- a/src/lab/exp4/Experiment.html
+++ b/src/lab/exp4/Experiment.html
@@ -100,7 +100,7 @@
 							<!--edit -->
 <h1 class="text-h2-lightblue">Impulse Response of S.D.O.F system</h1><div class="content" id="experiment-article-section-4-content">
 <p>
-<a href="Impluse.html" target="_blank">Click here to view Impulse Response of S.D.O.F system.</a><br><br>
+<a href="Impulse.html" target="_blank">Click here to view Impulse Response of S.D.O.F system.</a><br><br>
 
 <!--<a href="Impluse.html" target="_blank">Go to Flash view on Impulse Response of S.D.O.F system(Click here)</a><br><br>-->
 
