--- a/src/lab/exp6/Experiment.html
+++ b/src/lab/exp6/Experiment.html
@@ -100,7 +100,8 @@
 							<!--edit -->
 <h1 class="text-h2-lightblue">Vibration of M.D.O.F system</h1><div class="content" id="experiment-article-section-4-content">
 <p>
-<a href="exp5.html" target="_blank">Go to Flash view on Vibration of M.D.O.F system - Undamped Free Vibration(Click here)</a><br><br>
+<a href="exp6.html" target="_blank">Click here to view Vibration of M.D.O.F system - Undamped Free Vibration</a><br><br>
+<!--<a href="exp5.html" target="_blank">Go to Flash view on Vibration of M.D.O.F system - Undamped Free Vibration(Click here)</a><br><br>-->
 <a href="ve_mdof.html" target="_blank">Go to Virtual lab on Vibration of M.D.O.F system(Click here)</a>
 </br></br></p>
 </div>						</div>
