--- a/src/lab/exp8/Experiment.html
+++ b/src/lab/exp8/Experiment.html
@@ -100,7 +100,9 @@
 							<!--edit -->
 <h1 class="text-h2-lightblue">Torsional Response of Building</h1><div class="content" id="experiment-article-section-4-content">
 <p>
-<a href="torsion6.html" target="_blank">Go to Flash view on Torsional Response of Building(Click here)</a><br><br>
+<a href="torsion.html" target="_blank">Click here to view Torsional Response of Building</a><br><br>
+
+<!--<a href="torsion6.html" target="_blank">Go to Flash view on Torsional Response of Building(Click here)</a><br><br>-->
 <a href="ve_torsion.html" target="_blank">Go to Virtual lab on Torsional Response of Building(Click here)</a>
 </br></br></p>
 </div>						</div>
