--- a/src/lab/exp9/Experiment.html
+++ b/src/lab/exp9/Experiment.html
@@ -100,7 +100,8 @@
 							<!--edit -->
 <h1 class="text-h2-lightblue">Continuous Systems</h1><div class="content" id="experiment-article-section-4-content">
 <p>
-<a href="Coolingtowers.html" target="_blank">Go to Flash view on Continuous Systems(Click here)</a><br><br>
+<a href="Coolingtowers.html" target="_blank">Click here to view Continuous Systems</a><br><br>
+<!--<a href="Coolingtowers.html" target="_blank">Go to Flash view on Continuous Systems(Click here)</a><br><br>-->
 <a href="ve_csystems1.html" target="_blank">Go to Virtual lab on Continuous Systems - Rectangular Profile(Click here)</a><br><br>
 <a href="ve_csystems2.html" target="_blank">Go to Virtual lab on Continuous Systems - Trapezoidal Profile(Click here)</a><br><br>
 <a href="ve_csystems3.html" target="_blank">Go to Virtual lab on Continuous Systems - Hyperboloid Profile(Click here)</a>
