--- a/src/lab/exp10/Experiment.html
+++ b/src/lab/exp10/Experiment.html
@@ -100,7 +100,7 @@
 							<!--edit -->
 <h1 class="text-h2-lightblue">Vibration Control</h1><div class="content" id="experiment-article-section-4-content">
 <p>
-<a href="vibration-control1.html" target="_blank">Go to Flash view on Vibration Control - Tuned Mass Damper(Click here)</a><br><br>
+<a href="vibration-control1.html" target="_blank">Click here to view Vibration Control - Tuned Mass Damper</a><br><br>
 <a href="tld.swf" target="_blank">Go to Flash view on Vibration Control - Tuned Liquid Damper(Click here)</a><br><br>
 <a href="ve_vibrationcontrol.html" target="_blank">Go to Virtual lab on Vibration Control(Click here)</a>
 </br></br></br></br></p>
