--- a/src/lab/exp1/Procedure.html
+++ b/src/lab/exp1/Procedure.html
@@ -100,8 +100,7 @@
 							<!--edit -->
 <h1 class="text-h2-lightblue">Simple Harmonic Oscillator</h1><div class="content" id="experiment-article-section-7-content">
 <p>
-	      <!-- Procedure for the experiment is as follows. -->
-	      Procedure is under construction. It will be updated soon.
+	      <a href="http://webassign.net/question_assets/ncsucalcphysmechl3/lab_7_2/manual.html">Click Here</a>
 	    </p>
 </div>						</div>
 					</div>
