--- a/src/lab/exp2/Procedure.html
+++ b/src/lab/exp2/Procedure.html
@@ -100,8 +100,7 @@
 							<!--edit -->
 <h1 class="text-h2-lightblue">Free vibration of S.D.O.F system</h1><div class="content" id="experiment-article-section-7-content">
 <p>
-	      <!-- Procedure for the experiment is as follows. -->
-	       Procedure is under construction. It will be updated soon.
+	<a href="http://morse.uml.edu/Activities.d/CDM/docs/SD_LN02.pdf">Click Here</a>
 	    </p>
 </div>						</div>
 					</div>
