--- a/src/lab/exp3/Procedure.html
+++ b/src/lab/exp3/Procedure.html
@@ -100,9 +100,10 @@
 							<!--edit -->
 <h1 class="text-h2-lightblue">Forced vibration of S.D.O.F system</h1><div class="content" id="experiment-article-section-7-content">
 <p>
-	      <!-- Procedure for the experiment is as follows. -->
-	       Procedure is under construction. It will be updated soon.
-	    </p>
+	      <a href="http://www.brown.edu/Departments/Engineering/Courses/En4/Notes/vibrations_forced/vibrations_forced.htm">Forced Vibration of S.D.O.F system - Damped Forced Vibration(Click here)</a><br><br>
+	    
+	      <a href="http://www.academia.edu/9293987/Undamped_Forced_Vibration_of_SDOF_Systems">Forced Vibration of S.D.O.F system - Undamped Forced Vibration(Click here)</a><br><br>						
+			</p>
 </div>						</div>
 					</div>
 			</div>
