--- a/src/lab/exp4/Procedure.html
+++ b/src/lab/exp4/Procedure.html
@@ -100,8 +100,7 @@
 							<!--edit -->
 <h1 class="text-h2-lightblue">Impulse Response of S.D.O.F system</h1><div class="content" id="experiment-article-section-7-content">
 <p>
-	     <!--  Procedure for the experiment is as follows. -->
-	      Procedure is under construction. It will be updated soon.
+	<a href="https://engineering.purdue.edu/~ce597m/Handouts/Heaton_SDOF_ch1.pdf">Click Here</a>
 	    </p>
 </div>						</div>
 					</div>
