--- a/src/lab/exp5/Procedure.html
+++ b/src/lab/exp5/Procedure.html
@@ -100,8 +100,7 @@
 							<!--edit -->
 <h1 class="text-h2-lightblue">Concept of Response Spectrum</h1><div class="content" id="experiment-article-section-7-content">
 <p>
-	      <!-- Procedure for the experiment is as follows. -->
-	       Procedure is under construction. It will be updated soon.
+	<a href="https://nptel.ac.in/courses/105101004/downloads/04%20Chapter.pdf">Click Here</a>
 	    </p>
 </div>						</div>
 					</div>
