--- a/src/lab/exp6/Procedure.html
+++ b/src/lab/exp6/Procedure.html
@@ -100,8 +100,7 @@
 							<!--edit -->
 <h1 class="text-h2-lightblue">Vibration of M.D.O.F system</h1><div class="content" id="experiment-article-section-7-content">
 <p>
-	     <!--  Procedure for the experiment is as follows. -->
-	      Procedure is under construction. It will be updated soon.
+	     <a href="https://www.brown.edu/Departments/Engineering/Courses/En4/Notes/vibrations_mdof/vibrations_mdof.htm">Click here</a>
 	    </p>
 </div>						</div>
 					</div>
