--- a/src/lab/exp7/Procedure.html
+++ b/src/lab/exp7/Procedure.html
@@ -100,8 +100,7 @@
 							<!--edit -->
 <h1 class="text-h2-lightblue">Behaviour of Rigid Blocks</h1><div class="content" id="experiment-article-section-7-content">
 <p>
-	      <!-- Procedure for the experiment is as follows. -->
-	       Procedure is under construction. It will be updated soon.
+	<a href="https://pp.bme.hu/me/article/download/1432/836/">Click Here</a>
 	    </p>
 </div>						</div>
 					</div>
