--- a/src/lab/exp9/Procedure.html
+++ b/src/lab/exp9/Procedure.html
@@ -100,8 +100,7 @@
 							<!--edit -->
 <h1 class="text-h2-lightblue">Continuous Systems</h1><div class="content" id="experiment-article-section-7-content">
 <p>
-	     <!--  Procedure for the experiment is as follows. -->
-	      Procedure is under construction. It will be updated soon.
+	     <a href="http://www1.aucegypt.edu/faculty/mharafa/MENG%20475/Continuous%20Systems%20Fall%202010.pdf">Click Here</a>
 	    </p>
 </div>						</div>
 					</div>
