--- a/src/lab/exp10/Procedure.html
+++ b/src/lab/exp10/Procedure.html
@@ -100,8 +100,8 @@
 							<!--edit -->
 <h1 class="text-h2-lightblue">Vibration Control</h1><div class="content" id="experiment-article-section-7-content">
 <p>
-	     <!--  Procedure for the experiment is as follows. -->
-	      Procedure is under construction. It will be updated soon.
+	     <a href="https://www.researchgate.net/publication/315687146_Vibration_control_using_tuned_mass_damper">Vibration Control-Tuned Mass Damper(Click Here)</a><br><br>
+	     <a href="https://www.tandfonline.com/doi/full/10.1080/19373260903425410">Vibration Control - Tuned Liquid Damper(Click here)</a><br><br>
 	    </p>
 </div>						</div>
 					</div>
