--- a/src/lab/Introduction.html
+++ b/src/lab/Introduction.html
@@ -57,15 +57,15 @@
 			                
 			                <ul class="nav navbar-nav navbar-right menu-ul">
 			                    <li class="page-scroll menu-li " >
-			                        <a href="http://vlabs.ac.in/index.html?domain=Civil Engineering&lab=Welcome to Structural Dynamics lab!" class="menu-a" >HOME</a>
+			                     <a href="http://vlabs.ac.in/" class="menu-a" >HOME</a>   
 			                    </li>
 			                    <li class="page-scroll menu-li menu-li-active">
-			                        <a href="http://vlabs.ac.in/labs.html?domain=Civil Engineering&lab=Welcome to Structural Dynamics lab!"  class="menu-a menu-a-active" >ALL LABS</a>
+			                        <a href="http://vlab.co.in/institute_detail.php?ins=008"  class="menu-a menu-a-active" >ALL LABS</a>
 			                    </li>
 			                    <li class="page-scroll menu-li " >
-			                        <a href="http://vlabs.ac.in/index.html?domain=Civil Engineering&lab=Welcome to Structural Dynamics lab!#partner" class="menu-a" >PARTNERS</a>
+			                        <a href="http://vlab.co.in/participating-institutes" class="menu-a" >PARTNERS</a>
 			                    </li><li class="page-scroll menu-li " >
-			                        <a href="http://vlabs.ac.in/index.html?domain=Civil Engineering&lab=Welcome to Structural Dynamics lab!#contact" class="menu-a" >CONTACT</a>
+			                        <a href="http://vlab.co.in/contact-us" class="menu-a" >CONTACT</a>
 			                    </li>
 			                </ul>
 			                
