--- a/src/lab/exp7/Theory.html
+++ b/src/lab/exp7/Theory.html
@@ -102,8 +102,8 @@
 <p align="justify">
 <img src="Expr6-1.png"><br><br>
           The equations that govern the rocking motion under the simultaneous presence of,<br>
-<img height="1" src="Expr6-2.png" width="2"> -- horizontal ground accelaration and,<br>
-<img src="Expr6-3.png">-- vertical ground acceleration are ..
+<img src="Expr6-3.png"> -- horizontal ground accelaration and,<br>
+<img src="Expr6-2.png">-- vertical ground acceleration are ..
 </img></br></img></br></br></br></img></p>
 <p>
 <a href="7.Theory.pdf" target="_blank">Read More</a>
