--- a/src/lab/exp10/Further Readings.html
+++ b/src/lab/exp10/Further Readings.html
@@ -104,7 +104,7 @@
 <a href="http://en.wikipedia.org/wiki/Tuned_mass_damper">http://en.wikipedia.org/wiki/Tuned_mass_damper</a>
 </li>
 <li>
-<a href="http://en.wikipedia.org/wiki/Base_isolation.">http://en.wikipedia.org/wiki/Base_isolation.</a>
+<a href="http://en.wikipedia.org/wiki/Base_isolation">http://en.wikipedia.org/wiki/Base_isolation.</a>
 </li>
 <li>
 <a href="http://en.wikipedia.org/wiki/Vibration_control">http://en.wikipedia.org/wiki/Vibration_control</a>
