--- a/src/lab/exp1/Further Readings.html
+++ b/src/lab/exp1/Further Readings.html
@@ -107,7 +107,7 @@
 <a href="http://www.physics.uoguelph.ca/tutorials/shm/Q.shm.html">http://www.physics.uoguelph.ca/tutorials/shm/Q.shm.html</a>
 </li>
 <li>
-<a href="http://surendranath.tripod.com/Applets/Oscillations/SHM/SHMApplet.html">http://surendranath.tripod.com/Applets/Oscillations/SHM/SHMApplet.html</a>
+<a href="http://www.surendranath.org/GPA/Oscillations/SHM/SHM.html">http://www.surendranath.org/GPA/Oscillations/SHM/SHM.html</a>
 </li>
 <li>
                 “Dynamics of structures” by Anil K chopra. 
