--- a/src/lab/exp7/Further Readings.html
+++ b/src/lab/exp7/Further Readings.html
@@ -101,7 +101,7 @@
 <h1 class="text-h2-lightblue">Behaviour of Rigid Blocks</h1><div class="content" id="experiment-article-section-8-content">
 <ul>
 <li>
-<a href="http://caltecheerl.library.caltech.edu/186/">http://caltecheerl.library.caltech.edu/186/</a>
+<a href="https://authors.library.caltech.edu">https://authors.library.caltech.edu</a>
 </li>
 <li>
                “Dynamic Response Analysis of Rocking Rigid blocks subjected to half-sine pulse type base excitations” Mutlu Özer and G. Füsun Alışverişci
