--- a/src/lab/exp7/Introduction.html
+++ b/src/lab/exp7/Introduction.html
@@ -102,7 +102,7 @@
 <p align="justify">
             Shake table is an experimental set-up where buildings can be vibrated using real ground motion to test the resistance of structures and to demonstrate the sensitivity of structures of different heights to the frequency of the ground motion. <br>
 
-To understand the behavior of rigid blocks (or furniture) to given amplitude and frequency of ground motion. Shake table is an experimental set-up where buildings can be vibrated using real ground motion to test the resistance of structures and to demonstrate the sensitivity of structures of different heights to the frequency of the ground motion. <br><br>
+To understand the behavior of rigid blocks (or furniture) to given amplitude and frequency of ground motion. <br><br>
 <img src="shkae_obser.bmp"/>
 </br></br></br></p>
 </div>						</div>
