Removed invalid link and also removed unnecessary latex inputs

--- a/src/lab/exp4/Further Readings.html
+++ b/src/lab/exp4/Further Readings.html
@@ -107,10 +107,7 @@
 <a href="http://www.euclideanspace.com/physics/dynamics/collision/impulse/index.htm">http://www.euclideanspace.com/physics/dynamics/collision/impulse/index.htm</a>
 </li>
 <li>
-<a href="http://encyclopedia.farlex.com/Impulse+%28physics%29">http://encyclopedia.farlex.com/Impulse+%28physics%29</a>
-</li>
-<li>
-                âDynamics of structuresâ by Anil K chopra. 
+               	Dynamics of structures by Anil K chopra. 
               </li>
 </ul>
 </div>						</div>
