--- a/src/lab/Prerequisites.html
+++ b/src/lab/Prerequisites.html
@@ -107,7 +107,8 @@
 </ul>
 <a href="documents/installFlash.html">Install Flash Plugin to run the Simulation</a><br><br>
 <a href="documents/installJava.html">Install Java Plugin to run the Simulation</a><br><br>
-<a href="documents/installJava3D.html">Install Java3D Plugin to run the Simulation</a>
+<a href="documents/installJava3D.html">Install Java3D(for windows) Plugin to run the Simulation</a><br><br>
+<a href="documents/java3d_linux.pdf">Install Java3D(for unix) Plugin to run the Simulation</a>
 </br></br></br></br></p>
 </div>						</div>
 					</div>
