--- a/src/lab/exp6/Further Readings.html
+++ b/src/lab/exp6/Further Readings.html
@@ -107,7 +107,7 @@
 <a href="http://ece.olin.edu/dynamics/assign/ps5_f08.pdf">http://ece.olin.edu/dynamics/assign/ps5_f08.pdf</a>
 </li> -->
 <li>
-<a href="http://www.aerostudents.com/files/vibrations/multipleDegreeOfFreedomSystems.pdf">http://www.aerostudents.com/files/vibrations/multipleDegreeOfFreedomSystems.pdf</a>
+<a href="https://ocw.mit.edu/courses/aeronautics-and-astronautics/16-20-structural-mechanics-fall-2002/lecture-notes/unit22.pdf">http://www.aerostudents.com/files/vibrations/multipleDegreeOfFreedomSystems.pdf</a>
 </li>
 <li>
                 "Earthquake Resistant Design of Structures" by Pankaj Agarwal, Manish Shrikande
