--- a/src/lab/exp6/Further Readings.html
+++ b/src/lab/exp6/Further Readings.html
@@ -101,7 +101,7 @@
 <h1 class="text-h2-lightblue">Vibration of M.D.O.F system</h1><div class="content" id="experiment-article-section-8-content">
 <ul>
 <li>
-<a href="http://ocw.mit.edu/NR/rdonlyres/Aeronautics-and-Astronautics/16-20Structural-%20MechanicsFall2002/7E90098F-C973-4B10-9C91-94730623C3B9/0/unit22.pdf">http://ocw.mit.edu/NR/rdonlyres/Aeronautics-and-Astronautics/16-20Structural-%20MechanicsFall2002/7E90098F-C973-4B10-9C91-94730623C3B9/0/unit22.pdf</a>
+<a href="https://ocw.mit.edu/courses/mechanical-engineering/2-003sc-engineering-dynamics-fall-2011/vibration-of-multi-degree-of-freedom-systems/">http://ocw.mit.edu/NR/rdonlyres/Aeronautics-and-Astronautics/16-20Structural-%20MechanicsFall2002/7E90098F-C973-4B10-9C91-94730623C3B9/0/unit22.pdf</a>
 </li>
 <!-- <li>
 <a href="http://ece.olin.edu/dynamics/assign/ps5_f08.pdf">http://ece.olin.edu/dynamics/assign/ps5_f08.pdf</a>
