--- a/src/lab/exp2/Manual.html
+++ b/src/lab/exp2/Manual.html
@@ -117,7 +117,7 @@ Draw the graph between mass and time period.<br>
 <p><br><br>
 <!-- <a href="freevib.htm" target="_blank">Go to Manual view on Free Vibration of S.D.O.F system(Click here)</a><br><br>
 </br></br></br></br> -->
-<a>Manual view on Free Vibration of S.D.O.F system is under construction</a><br><br>
+<a href="https://www.aero.iitb.ac.in/~mira/lecture1.pdf">Manual view on Free Vibration of S.D.O.F system</a><br><br>
 </br></br></br></br></p>
 </div>						</div>
 					</div>
