--- a/src/lab/exp10/results.htm
+++ b/src/lab/exp10/results.htm
@@ -51,14 +51,14 @@ parse=n
 
 }
 
-var incorrect=results[parse].split("=")
-incorrect=incorrect[1].split("/")
-if (incorrect[incorrect.length-1]=='b')
-incorrect=""
-document.result[0].value=totalquestions-incorrect.length+" out of "+totalquestions
-document.result[2].value=(totalquestions-incorrect.length)/totalquestions*100+"%"
-for (temp=0;temp<incorrect.length;temp++)
-document.result[1].value+=incorrect[temp]+", "
+var correct=results[parse].split("=")
+correct=correct[1].split("/")
+if (correct[correct.length-1]=='b')
+correct=""
+document.result[0].value=totalquestions-correct.length+" out of "+totalquestions
+document.result[2].value=(totalquestions-correct.length)/totalquestions*100+"%"
+for (temp=0;temp<correct.length;temp++)
+document.result[1].value+=correct[temp]+", "
 
 
 </script>
